src/objects/Collection_Time_Slot__c.object
<CustomObject>
    <description>A session for a collector</description>
    <fields>
        <fullName>Collection_Location__c</fullName>
        <label>Collection Location</label>
        <referenceTo>Collection_Location__c</referenceTo>
        <relationshipLabel>Collection Time Slots</relationshipLabel>
        <relationshipName>Collection_Time_Slots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Count_of_Collectors__c</fullName>
        <label>Count of Collectors</label>
        <summaryForeignKey>Collector_Session__c.CollectionSession__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Duration_in_minutes__c</fullName>
        <defaultValue>60</defaultValue>
        <inlineHelpText>Duration of collection session.</inlineHelpText>
        <label>Duration in minutes</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <description>Calculate end time for session - from duration</description>
        <formula>If (Duration_in_minutes__c &gt;0,Start_Date_Time__c +  (Duration_in_minutes__c /1440),Start_Date_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Session_Available__c</fullName>
        <formula>Count_of_Collectors__c &lt;   Collection_Location__r.Number_of_volunteers_per_session__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Collection Time Slot</label>
    <nameField>
        <displayFormat>CT-{00000}</displayFormat>
        <label>Collection Time Slots Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collection Time Slots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>